fix background gap

--- a/apps/web/src/app/(dynamicPages)/entry/[category]/[author]/[permlink]/entry.scss
+++ b/apps/web/src/app/(dynamicPages)/entry/[category]/[author]/[permlink]/entry.scss
@@ -44,6 +44,8 @@
 }
 
 .entry-page {
+  margin-bottom: 0 !important;
+  @apply pb-24;
   max-width: 100% !important;
 
   @apply font-sans;
